<resources>
    <string name="app_name">A-Team321</string>

    <string name="home">Home</string>
    <string name="pesan">Pesan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temukan_wisata_live_in">Temukan wisata live-in</string>
    <string name="apa_yang_anda_cari">Apa yang anda cari?</string>
    <string name="rekomendasi_kami">Rekomendasi kami</string>
    <string name="daftar_jadi_agen_desa">Daftar Jadi Agen Desa</string>
    <string name="no_ktp">No. KTP</string>
    <string name="nama_desa">Nama desa</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten">Kabupaten/Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="nama_pokdarwis">Nama Pokdarwis</string>
    <string name="lanjut">lanjut</string>
    <string name="batal">batal</string>
    <string name="seperti_apa_desa_anda">Seperti apa desa anda?</string>
    <string name="potensi_wisata">Potensi wisata</string>
    <string name="wisata_alam">Wisata alam</string>
    <string name="wisata_historis">Wisata historis</string>
    <string name="wisata_religi">Wisata religi</string>
    <string name="wisata_arsitektur">Wisata arsitektur</string>
    <string name="lainnya">Lainnya</string>
    <string name="kelengkapan">Kelengkapan</string>
    <string name="organisasi_pemuda_karang_taruna">Organisasi pemuda / karang taruna</string>
    <string name="pokdarwis">Pokdarwis</string>
    <string name="koperasi">Koperasi</string>
    <string name="tempat_ibadah">Tempat ibadah</string>
    <string name="balai_desa">Balai desa</string>
    <string name="lapangan">Lapangan</string>
    <string name="seperti_apa_paket_wisata_live_in_anda">Seperti apa paket wisata live-in anda?</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="deskripsi_desa">Deskripsi desa</string>
    <string name="deskripsi_kegiatan">Deskripsi kegiatan</string>
    <string name="pilih_lokasi">pilih lokasi</string>
    <string name="tambah_gambar">tambah gambar</string>


    <string name="dont_have_account">Belum Punya Akun</string>
    <string name="sudahpunyaakun">Sudah Punya Akun ?</string>
    <string name="input_error_name123">Nama tidak bisa kosong\\</string>
    <string name="input_error_email">Email tidak boleh kosomg</string>
    <string name="input_error_email_invalid">input yang anda masukan bukan email</string>
    <string name="input_error_password">Password harus diisi</string>
    <string name="input_error_password_length">Paswword harus lebih dari 6 karakter</string>
    <string name="input_confirm_false">Password anda tidak sama</string>


    <string name="tambahkan_tuan_rumah">Tambahkan tuan rumah</string>
    <string name="nama_kepala_keluarga">Nama kepala keluarga</string>
    <string name="deskripsi_keluarga">Deskripsi Keluarga</string>
    <string name="nomor_ktp_kepala_keluarga">Nomor KTP kepala keluarga</string>
    <string name="unggah_foto_ktp">Unggah foto KTP</string>
    <string name="unggah_foto_rumah">Unggah foto rumah</string>
    <string name="selamat">Selamat! \n Desa anda sudah terdaftar</string>
    <string name="ok">OK</string>
    <string name="yang_akan_anda_lakukan">Yang akan anda lakukan</string>
    <string name="agendesa">Agendesa</string>
    <string name="per_orang">Per orang</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="pesan_paket_wisata">Pesan paket wisata</string>
    <string name="jumlah_peserta">Jumlah peserta</string>
    <string name="tanggal">Tanggal</string>
    <string name="strip">-</string>
    <string name="pilih_tuan_rumah">Pilih tuan rumah</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="rp">Rp</string>
    <string name="transfer_bank">Transfer bank</string>
    <string name="indomaret">Indomaret</string>
    <string name="gopay">GoPay</string>
    <string name="bayar">Bayar</string>


    <string name="Welcome1_title">Temukan wisata Live-in</string>
    <string name="weclome1_description">Kamu bisa mencari wisata Live-in yang cocok untukmu</string>
    <string name="welcome2_title">Buat wisata Live-in mu!</string>
    <string name="weclome2_description">Jadilah Agendesa dengan membuat wisata live-in di desa mu</string>
    <string name="weclome3_description">Libatkan warga desamu!</string>
    <string name="weclome_description">Ajak warga desa untuk menjadi tuan rumah live-in</string>
    <string name="Welcome4_title">Gali potensi desamu!</string>
    <string name="weclome4_description">Gunakan fitur analisa untuk mengetahui dan menggali potensi desamu menggunakan Artificial Intelligence</string>
    <string name="next">LANJUT</string>
    <string name="start">LANJUT</string>
    <string name="gambar_jenis">Gambar Jenis</string>
    <string name="analisis_desa">Analisis desa</string>
    <string name="temukan_dan_gali_potensi_desa_mu_menggunakan_artificial_intilligence">Temukan dan gali potensi desa mu menggunakan Artificial Intilligence.</string>
    <string name="scan_desa">Scan desa</string>

    <string name="pesanan">Pesanan</string>
    <string name="pesan_masuk">Pesan masuk</string>
    <string name="kembali">Kembali</string>
    <string name="simpan">simpan</string>
    <string name="confirm_permission">This app need to access files on your device.</string>
    <string name="confirm_camera1">This app need to access camera on your device.</string>
    <string name="maturnuwun_mas_sudah_mampir_ke_desa_kami">Maturnuwun mas, sudah mampir ke desa kami</string>
    <string name="pesanan_berhasil">Pesanan berhasil!</string>
    <string name="rasawarga">rasawarga</string>
    <string name="harga">Harga</string>

    <string name="daftar">DAFTAR</string>
    <string name="tambah">TAMBAH</string>
    <string name="hari">Hari</string>

    <string-array name="hari_array">
        <item>1 Hari</item>
        <item>2 Hari</item>
        <item>3 Hari</item>
        <item>4 Hari</item>
        <item>5 Hari</item>
        <item>6 Hari</item>
        <item>7 Hari</item>

    </string-array>
    <string-array name="orang_array">
        <item>1 Orang</item>
        <item>2 Orang</item>
        <item>3 Orang</item>
        <item>4 Orang</item>
        <item>5 Orang</item>
        <item>6 Orang</item>
        <item>7 Orang</item>

    </string-array>


</resources>
