<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".BayarFragment">

    <TextView
        android:id="@+id/source_bayar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pilih_metode_pembayaran"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#1D1D1D3F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_bayar" />

    <TextView
        android:id="@+id/source_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_pembayaran"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_total_bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#68C7DB"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_total"
        tools:text="1.600.000" />

    <TextView
        android:id="@+id/source_rp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp"
        android:textColor="#68C7DB"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_bayar"
        app:layout_constraintTop_toTopOf="@+id/tv_total_bayar" />

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/item_circle_done"
        android:backgroundTint="#68C7DB"
        android:elevation="16dp"
        android:src="@drawable/ic_done_24px"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_transfer"
        app:layout_constraintStart_toStartOf="@+id/btn_transfer"
        app:layout_constraintTop_toTopOf="@+id/btn_transfer" />

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="15dp"
        android:background="@drawable/radius_corner_upload"
        android:text="@string/transfer_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_bayar" />

    <ImageView
        android:id="@+id/img_check2"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/item_circle_done"
        android:backgroundTint="#68C7DB"
        android:elevation="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_done_24px"
        app:layout_constraintBottom_toTopOf="@+id/btn_gopay"
        app:layout_constraintStart_toStartOf="@+id/btn_gopay"
        app:layout_constraintTop_toTopOf="@+id/btn_gopay" />

    <Button
        android:id="@+id/btn_gopay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="15dp"
        android:background="@drawable/radius_corner_upload"
        android:text="@string/gopay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_transfer" />

    <ImageView
        android:id="@+id/img_check3"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/item_circle_done"
        android:backgroundTint="#68C7DB"
        android:elevation="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_done_24px"
        app:layout_constraintBottom_toTopOf="@+id/btn_indomaret"
        app:layout_constraintStart_toStartOf="@+id/btn_indomaret"
        app:layout_constraintTop_toTopOf="@+id/btn_indomaret" />

    <Button
        android:id="@+id/btn_indomaret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="15dp"
        android:background="@drawable/radius_corner_upload"
        android:text="@string/indomaret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gopay" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/bayar" />

    <TextView
        android:id="@+id/tv_batal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/batal"
        android:textColor="#848484"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bayar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bayar" />

    <Button
        android:id="@+id/bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="8dp"
        android:padding="16dp"
        android:background="@drawable/radius_corner_blue"
        android:text="@string/bayar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>